=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2011-02-18  15:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-369
Remove mentions to SLEPC

The mentions to SLEPC were fossils from a side branch and they have been
removed.

modified:
  Src/siesta_init.F

-----------------------------------------------------------------------
2011-02-03  11:15:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-368
Incorporation of BSC code: mesh optimization; parallel fdf library

* The ongoing collaboration with the Barcelona Supercomputer Center
(through the department of Computer Applications in Science and
Engineering) has resulted in two new main enhancements:

- New code to improve the load-balance among processors in the
operations carried out in the real-space mesh (involved in the
computation of charge density, exchange-correlation potential, and
matrix elements of the hamiltonian, among others).

Since the different operations have different work-load patterns, it
has been necessary to define and handle three separate data
distributions, with appropriately optimized communication patterns.
Most of the new code is contained in new specialized modules, and
there are calls for data distribution handling in higher-level
modules, notably dhscf.

An overview of the rationale and implementation of the new functionality
can be found in

An efficient implementation of a QM-MM method in SIESTA,
C. F. Sanz-Navarro, R. Grima, A. Garcia, E. A. Bea, A. Soba,
J.M. Cela, and P. Ordejon, 
Theoretical Chemistry Accounts. Online pub Sep 2010. 
DOI: 10.1007/s00214-010-0816-5

We are working on a set of developer-oriented notes to facilitate
future enhancements.

- A new fdf library which avoids the 'master node bottleneck': each