@@ -6,6 +6,17 @@
 ** CHANGES ALONG trunk
 
 -----------------------------------------------------------------------
+2011-02-18  15:55:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-370
+Re-initialize data array in timer routine
+
+Apparently it fixes some strangeness with some compilers.
+
+(by Jose Soler)
+
+modified:
+  Src/m_timer.F90
+
+-----------------------------------------------------------------------
 2011-02-18  15:50:00 GMT Alberto Garcia <albertog@icmab.es>   trunk-369
 Remove mentions to SLEPC
 
